--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,10 @@
 h1 {
-  color: blue;
+  color: darkred;
   text-align: center;
 }
 
 h2 {
   font-style: italic;
-  text-align: center;
   color: red;
 }
 
@@ -15,4 +14,6 @@ p {
 
 body {
   background-color: salmon;
+  font-family: sans-serif;
+  text-align: center;
 }
